--- a/flask_test_yty/templates/18.x/18.3/index.html
+++ b/flask_test_yty/templates/18.x/18.3/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div id="app">
-   <a v-bind:class="{active:isActive}"  v-bind:href="url">
+   <a class="{active:isActive}"  href="url">
      <!--<img v-bind:src="img">-->点我
    </a>
 <!--v-bind后面都不会写了。只写一个冒号：-->
